# GNN-on-Storage

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES  README.md  __gat.py  _exp_arxiv.py  _gat.py  conda_env.txt  config.py  coo2csc.py  dataloader.py  dataset.py  datasets.py  dgl_convert.py  eval_shuffle_orders.py  exp_arxiv.py  experiments.py  gat.py  gat_pyg.py  gnnos.pyi  gnnos_datasets.py  gnnos_graph.py  gnnos_utils.py  graphloader.py  lean_exp.py  logger.py  modules.py  old_exp.py  partition_utils.py  pre_process.py  pre_transform.py  preprocess.py  pyg_with_partitioner_exp_arxiv.py  request-node.sh  requirements.txt  run-mmap.sh  run_acc.py  run_ahead.py  run_eval.py  (+20 more)
Cici/: run-mmap.sh  trainer_mmap.py
GNS/: utils.py
baseline/NS/: modules.py  trainer_all.py  trainer_mmap.py
baseline/cluster_gcn/: cluster_gcn.py  run.sh
baseline/graphsage/: copy-data.sh  graphsage.py  load_graph.py  multi_gpu_node_classification.py  run-disk.sh  run-multiple.sh  run-single.sh  run.sh  train_multi_gpu.py  train_single.py
cluster_gcn/: GNNoS.py  Makefile  cluster_cache_sampling.py  cluster_gcn.py  cluster_gcn_orig.py  cluster_sampling.py  feat_shuffle.cpp  modules.py  partition_utils.py  run_ogbn.sh  run_reddit.sh  run_reddit_cache.sh  run_reddit_sampling.sh  sampler.py  utils.py
conf/: arxiv-hb.json5  arxiv-mrs.json5  arxiv-mts.json5  arxiv-new.json5  arxiv-ns.json5  arxiv-part.json5  arxiv-r-hb.json5  arxiv-r-mrs.json5  arxiv-r-mts.json5  arxiv-r-ns.json5  example.json5  igb-large-hb.json5  igb-large-ns.json5  mag240m-c-hb.json5  mag240m-c-mrs.json5  mag240m-c-ns-ri.json5  mag240m-c-ns.json5  papers-hb-ri.json5  papers-hb.json5  papers-mrs.json5  papers-ns-ri.json5  papers-ns.json5  products-hb.json5  products-ns.json5  reddit-hb.json5  reddit-mrs.json5  reddit-ns.json5
conf/slurm/: mag240m-c-hb.json5  mag240m-c-mrs.json5  mag240m-c-ns-ri.json5  mag240m-c-ns.json5  papers-di-ns.json5  papers-ns.json5
csrc/: block_scheduler.cpp  build_scheduler.sh  extension.cpp  graph_io.cpp  graph_io.hpp  graph_partition.cpp  graph_partition.hpp  main.cpp  tensor_io.cpp  tensor_io.hpp  utils.hpp
data/: CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake  collater.py  compile_commands.json  datasets.py  graphloader.py  io.py  ops.py  partitioner.py  shmem.py  shmem_v6d.py
data/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
data/csrc/: ext_ops.cpp  ext_ops.hpp  ext_tensor.cpp  fennel.cpp  fennel.hpp  fennel_ops.cpp  fennel_weighted.cpp  heap.cpp  iplasma.h  iplasma_buffer.cpp  iplasma_common.cpp  iplasma_common.h  iplasma_fling.cpp  iplasma_io.cpp  iplasma_io.h  iplasma_malloc.cpp  iplasma_malloc.h  iplasma_store.cpp  iplasma_store.h  iplasma_test.cpp  packed.hpp  utils.hpp
data/tmp/bulid/: CMakeCache.txt
datapipe/: __init__.py  base_pipes.py  batcher.py  custom_pipes.py  parallel_pipes.py  sampler_dgl.py  sampler_fn.py  sampler_mp_dgl.py
datapipe/communication/: __init__.py  _utils.py  eventloop.py  iter.py  messages.py  protocol.py
graphsage/: GNS_sampling_prob.py  env.sh  ioprof.sh  preprocess.py  set_memory_limit.sh  train_sampling.py
graphutils/: __init__.py  coo2csc.py  importance.py  rw.py
model/: gnn_unbiased.py
models/: dgl.py  dgl_unbiased.py  pyg.py
models/ckpt/: ogbn-arxiv-sage.NS.0.pt  ogbn-arxiv-sage.NS.1.pt
notebooks/: GNN Sampling.ipynb  accuracy_study.ipynb  mfg_drop copy.ipynb  mfg_drop.ipynb  pivot_evaluation copy.ipynb  pivot_evaluation.ipynb  sampling.ipynb  stats.ipynb
sbatch/: mag240m-c-sg.sbatch  mag240m-c.sbatch  mag240m-mem.sbatch  mag240m-sg.sbatch  mag240m.sbatch  ogbn-arxiv-sg.sbatch  ogbn-arxiv.sbatch  ogbn-papers100M-1gpu-disk.sbatch  ogbn-papers100M-1gpu-mem.sbatch  ogbn-papers100M-disk.sbatch  ogbn-papers100M-mem.sbatch  ogbn-papers100M-sg.sbatch  ogbn-papers100M.sbatch  ogbn-products-1gpu-disk.sbatch  ogbn-products-1gpu-mem.sbatch  ogbn-products-mem.sbatch  ogbn-products-sg.sbatch  ogbn-products.sbatch
scripts/: avg_degree.py  build.sh  create_cgroup.sh  drop_cache.sh  env.sh  ginex_preprocess.py  numpy_memmap_test.py  preprocess-mag240m.py  preprocess.py  run-exp.sh  run-mmap.sh  run-papers-gin.sh  run-preprocessing.sh  sched.sbatch  set_memory_limit.sh  sysprof.sh
tb_output/all_tricks_2023-08-30 00:25:55.115634_fennel2_1_$1_seed_0/: events.out.tfevents.1693369555.bubble.28395.0
tb_output/all_tricks_2023-08-30 00:26:54.156042_fennel2_1_$1_seed_0/: events.out.tfevents.1693369614.bubble.28443.0
tb_output/all_tricks_2023-08-30 00:28:39.441137_fennel2_1_$1_seed_0/: events.out.tfevents.1693369719.bubble.28498.0
tb_output/all_tricks_2023-08-30 00:29:01.092226_fennel2_1_$1_seed_0/: events.out.tfevents.1693369741.bubble.28545.0
tb_output/all_tricks_2023-08-30 00:30:03.192202_fennel2_1_$1_seed_0/: events.out.tfevents.1693369803.bubble.28592.0
tb_output/all_tricks_2023-08-30 00:30:47.399676_fennel2_1_$1_seed_0/: events.out.tfevents.1693369847.bubble.28639.0
tb_output/all_tricks_2023-08-30 00:31:09.233474_fennel2_1_$1_seed_0/: events.out.tfevents.1693369869.bubble.28685.0
tb_output/all_tricks_2023-08-30 00:31:35.188147_fennel2_1_$1_seed_0/: events.out.tfevents.1693369895.bubble.28732.0
tb_output/all_tricks_2023-08-30 00:32:29.081181_fennel2_1_$1_seed_0/: events.out.tfevents.1693369949.bubble.28821.0
tb_output/all_tricks_2023-08-30 00:32:51.269991_fennel2_1_$1_seed_0/: events.out.tfevents.1693369971.bubble.28868.0
tb_output/all_tricks_2023-08-30 00:34:12.118287_fennel2_1_$1_seed_0/: events.out.tfevents.1693370052.bubble.29106.0
tb_output/all_tricks_2023-08-30 00:35:35.144884_fennel2_1_$1_seed_0/: events.out.tfevents.1693370135.bubble.29402.0
tb_output/all_tricks_2023-08-30 00:36:46.344214_fennel2_1_$1_seed_0/: events.out.tfevents.1693370206.bubble.29449.0
test/: shm_buffer.py  test_batching.py  test_collate.py  test_cuda_stream.py  test_io.py  test_mp.py  test_partitioner.py  test_pipe.py  test_sampler.py  test_sharing.py  test_shm_backend.py  test_yield.py
trainer/: baseline.py  dataloader.py  helpers.py  recorder.py
(+77 files in other folders)
